2008-05-17  Evan Monroig  <evan.monroig@gmail.com>

	* tests.lisp (make-matrix-double-4, make-matrix-double-3)
	(make-matrix-double-2, make-matrix-double-1): don't test matrices
	for which one of the sizes is zero
	(make-matrix-double-zero-size): separate tests for zero size (does
	not work on clisp)
	(transpose-double, window-double, setf-mref, copy): for clisp,
	don't test matrices for which one of the sizes is zero

2008-05-11  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-utils.lisp (walk-and-replace): replace by common-lisp
	function SUBLIS

2008-05-07  Evan Monroig  <evan.monroig@gmail.com>

	* benchmark/lisp-vs-c-aref.lisp: same as the one on the page of
	Mark Hoemmen but with added tests for the MREF of lisp-matrix and
	matlisp

	* experimental/element-access.lisp: some tries to see if element
	access can be improved while having matrices defined as CLOS
	classes

2008-05-04  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-utils.lisp (def-lapack-method): add wrapper around method
	body to remove floating-point traps

	* lisp-matrix.asd (lisp-matrix): add new files

	* tests.lisp: moved tests from experimental/multiplication.lisp

	* lapack-methods.lisp (gemm): moved from
	experimental/multiplication.lisp

	* lapack-utils.lisp (make-predicate): moved from
	experimental/multiplication.lisp and renamed from
	BUILD-TEST-LAMBDA
	(with-copies, *supported-datatypes*, datatype->letter)
	(walk-and-replace, def-lapack-method, orientation->letter)
	(orientation-letter): moved from experimental/multiplication.lisp

	* fnv-matrix.lisp (transposed-p, zero-offset-p, copy-into, copy)
	(copy-into, copy-maybe, real-nrows, real-ncols): moved from
	experimental/multiplication.lisp

	* experimental/multiplication.lisp (with-copies): fixed bug in
	restoration
	(*supported-datatypes*): update to use same type names as in
	fnv-matrix.lisp
	(walk-and-replace, def-lapack-method): macro to create lapack
	wrapper methods, and a helper function